--- a/Angular02/src/app/diretivas/diretiva-for/diretiva-for.component.html
+++ b/Angular02/src/app/diretivas/diretiva-for/diretiva-for.component.html
@@ -1,6 +1,6 @@
 <p>diretiva-for works!</p>
 <input type="text" [(ngModel)]="nome">
-<button class="btn btn-success" (click)="adicionar()">Add</button>
+<button class="btn btn-success" (click)="adicionar()">ADD</button>
 <table class="table table-bordered">
   <thead>
     <th>#</th>
@@ -11,7 +11,7 @@
     <tr *ngFor="let aluno of alunos; let i = index">
       <td>{{i}}</td>
       <td>{{aluno}}</td>
-      <td><button (click)="deletar(i)" class="btn btn-warning">Deletar</button></td>
+      <td><button (click)="deletar(i)" class="btn btn-danger">deletar</button></td>
     </tr>
   </tbody>
 </table>
