--- a/Angular02/src/app/menu/menu.component.html
+++ b/Angular02/src/app/menu/menu.component.html
@@ -1,77 +1,16 @@
 <aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a routerLink="/" class="brand-link">
-        <img src="./../favicon.ico" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-            style="opacity: 0.8" />
-        <span class="brand-text font-weight-light">Aulas Angular</span>
+    <a class="brand-link">
+        <span class="brand-text font-weight-light">Angular Classes</span>
     </a>
-
     <div class="sidebar">
         <nav class="mt-2">
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-                <li class="nav-item">
-                    <a href="#" class="nav-link">
-                        <i class="nav-icon fas fa-tachometer-alt"></i>
-                        <p>
-                            Grupo de link 1
-                            <i class="right fas fa-angle-left"></i>
-                        </p>
+                <li class="nav-header">Classes</li>
+                <li *ngFor="let link of links" class="nav-item">
+                    <a [routerLink]="link.rota" class="nav-link">
+                        <i [class]="link.cor"></i>
+                        <p class="text">{{link.textContent}}</p>
                     </a>
-                    <ul class="nav nav-treeview">
-                        <li class="nav-item">
-                            <a routerLink="vaiPagina" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Cadastro Inicial</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="outro" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Tabela de cores</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="property" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Property</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="event" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Event</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="maoDupla" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Mão Dupla</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a [routerLink]="['/receber', 'Ciro', 33, 'Porto Belo']" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Receber</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="enviar" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>Enviar</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a routerLink="diretivaIf" class="nav-link">
-                                <i class="far fa-circle nav-icon"></i>
-                                <p>DiretivaIf</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                          <a routerLink="diretivaFor" class="nav-link">
-                              <i class="far fa-circle nav-icon"></i>
-                              <p>DiretivaFor</p>
-                          </a>
-                      </li>
-                    </ul>
                 </li>
             </ul>
         </nav>
